# raspberrypi_tempmon

./: .gitignore  .pre-commit-config.yaml  README.md  ci.yml  mytemp.sh  pyproject.toml  requirements.txt  rpi_tempmon.sh  rpi_tempmon_lib.py  setup.py
Documentation/: CHANGELOG.md  example_log.csv  example_log.txt  example_msmtprc  example_ssmtp.conf  example_stresslog.csv  rpi_tempmon.cfg
Documentation/history/: CHANGELOG.md
Documentation/stresstestdata/: stresstest.md
modules/: rpi_tempmon_2_lib.py  rpi_tempmon_lib.py
rpiTempMod/: RpiTempmonGraph.py  RpiTempmonWork.py
rpiTempSrc/: rpi_tempmon.py
rpi_tempmon/: alarms.py  config.py  display.py  graphs.py  log_writer.py  models.py  notifiers.py  rpi_tempmon.py  sensors.py  stress_test.py
src/: rpi_tempmon.sh
stresstestdata/: stresstest.md
tests/: .pylintrc  conftest.py  test_alarms.py  test_config.py  test_log_writer.py  test_models.py  test_sensors.py
